# rust-zero2prod-book

./: .env  Cargo.toml  Dockerfile  spec.yml
configuration/: base.yml  local.yml  production.yml
migrations/: 20251023031315_create_subscriptions_table.sql  20251207055447_add_status_to_subscriptions.sql  20251207183214_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscription.rs  subscriptions_confirm.rs
