[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
uuid ={version="1.0",features=["v4", "serde"]}
chrono="0.4.15"
config="0.11"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
once_cell="1"
log ="0.4"
tracing ={version="0.1",features=["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web="0.5"
unicode-segmentation = "1"
claim= "0.5"
validator = "0.14"
fake = "~2.3"
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
linkify ="0.8"

[dependencies.sqlx]
 version = "^0.8.6"
 
 features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono"
 ]

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros="0.9.1"
tokio = {version = "1", features = ["rt", "macros"]}
wiremock = "0.5"
serde_json = "1"